fixed font spacing

--- a/style.css
+++ b/style.css
@@ -13,8 +13,45 @@ body,html {
   color: #666;
 }
 
+.container_module {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
 .section{
   height: 400px;
+}
+
+section.module:last-child {
+  margin-bottom: 0;
+}
+section.module h2 {
+  margin-bottom: 40px;
+  font-family: "Roboto Slab", serif;
+  font-size: 30px;
+}
+section.module p {
+  margin-bottom: 40px;
+  font-size: 16px;
+  font-weight: 300;
+}
+section.module p:last-child {
+  margin-bottom: 0;
+}
+section.module.content {
+  padding: 40px 0;
+}
+
+@media all and (min-width: 600px) {
+  section.module h2 {
+    font-size: 42px;
+  }
+  section.module p {
+    font-size: 20px;
+  }
+  section.module.parallax h1 {
+    font-size: 96px;
+  }
 }
 
 .pimg1, .pimg2, .pimg3 {
